[package]
name = "spectrogram"
version = "0.1.0"
edition = "2021"
authors = ["Carlo Dell'Acqua <carlo.dellacqua97@gmail.com>"]
license = "MIT"
repository = "https://github.com/cdellacqua/spectrogram.rs"

[profile.release]
debug = true

[dependencies]
dotenv-flow = "0.16.2"
macroquad = "0.4.13"
hound = "3.5.1"

audio = { git = "https://github.com/cdellacqua/miscellaneous_libs.rs.git", rev = "f769af5c897520416532a5b38a8a8fd6b0671546", features = ["analysis", "input"] }
mutex_ext = { git = "https://github.com/cdellacqua/miscellaneous_libs.rs.git", rev = "f769af5c897520416532a5b38a8a8fd6b0671546" }
math_utils = { git = "https://github.com/cdellacqua/miscellaneous_libs.rs.git", rev = "f769af5c897520416532a5b38a8a8fd6b0671546" }
buffer_hopper = { git = "https://github.com/cdellacqua/miscellaneous_libs.rs.git", rev = "f769af5c897520416532a5b38a8a8fd6b0671546" }

# [patch."https://github.com/cdellacqua/miscellaneous_libs.rs.git"]
# audio = { path = "../miscellaneous_libs.rs/audio.rs" }
# math_utils = { path = "../miscellaneous_libs.rs/math_utils.rs" }
# buffer_hopper = { path = "../miscellaneous_libs.rs/buffer_hopper.rs" }
# mutex_ext = { path = "../miscellaneous_libs.rs/mutex_ext.rs" }
